Addressing issue #30:  Home page is not responsive for mobile devices

--- a/style.css
+++ b/style.css
@@ -152,3 +152,60 @@ header ul li a {
   color: #1e6d33;
   transform: scale(1.4);
 }
+
+
+/*
+Making Webpage Responsive 
+*/
+
+@media only screen and (max-width: 750px) {
+  header{
+    display: flex;
+    flex-direction: column;
+  }
+  header ul li a {
+    display: inline-block;
+    color: #333;
+    font-weight: 400;
+    margin-left: 10px;
+    text-decoration: none;
+    margin-right: 10px;
+    margin-top: 10px;
+    font-size: 15px;
+    white-space: nowrap;
+  }
+
+  .nav-hover {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .textBox H2{
+    font-size: 30px!important;
+  }
+  section{
+    padding: 10%;
+    overflow: hidden;
+  }
+  .circle{
+    top: 43%;
+  }
+  .starbucks{
+    /* max-width: 200px; */
+    width: 49%;
+    position: absolute;
+    left: 2%;
+    top: -5%;
+    /* z-index: 0; */
+    transform: translateX(200px);
+  }
+  .sci{
+    top: 72%;
+    right: 0%;
+    display: flex;
+    flex-direction: row;
+    /* width: 100%; */
+    justify-content: flex-end;
+  }
+}
